@@ -61,6 +61,7 @@ Changes in version 0.2.0.1-alpha - 2007-??-??
       proposal 104.]
 
   o Minor features (other):
+    - Correctly report Windows 95 OSR2 and Windows 98 SE.
     - More unit tests.
 
   o Removed features:
